--- a/EntregableBoostrap/Galería.html
+++ b/EntregableBoostrap/Galería.html
@@ -1,118 +1,201 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Galería</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel='stylesheet' type='text/css' media='screen' href="estilosCSS/estilosG.css">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/masonry/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Galería</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <link rel='stylesheet' type='text/css' media='screen' href="estilosCSS/estilosG.css">
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/masonry/">
+  <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+    integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
+    async></script>"
 
 </head>
+
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/EntregableBoostrap/Inicio.html">Pagina Principal</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/EntregableBoostrap/Actividades.html">Actividades</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/EntregableBoostrap/formulario.html">Formulario</a>
+          </li>
+        </ul>
+        
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success"
+            type="submit">¡Busca!</button><!--Este buscador no lleva a ningun sitio-->
+        </form>
+      </div>
+    </div>
+    <h1></h1>
+  </nav>
+</header>
+
+
+
 <main class="container py-5">
-    <h1>Mi casita rural</h1>
-    <p class="lead">Integrate <a href="https://masonry.desandro.com/">Masonry</a> with the Bootstrap grid system and cards component.</p>
-  
-    <p>Masonry is not included in Bootstrap. Add it by including the JavaScript plugin manually, or using a CDN like so:</p>
-  
-    <pre><code>
-  &lt;script src=&quot;https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js&quot; integrity=&quot;sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D&quot; crossorigin=&quot;anonymous&quot; async&gt;&lt;/script&gt;
-    </code></pre>
-  
-    <p>By adding <code>data-masonry='{"percentPosition": true }'</code> to the <code>.row</code> wrapper, we can combine the powers of Bootstrap's responsive grid and Masonry's positioning.</p>
-  
-    <hr class="my-5">
-  
-    <div class="row" data-masonry='{"percentPosition": true }'>
-      <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="card">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
-  
-          <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="card p-3">
-          <figure class="p-3 mb-0">
-            <blockquote class="blockquote">
-              <p>A well-known quote, contained in a blockquote element.</p>
-            </blockquote>
-            <figcaption class="blockquote-footer mb-0 text-muted">
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="card">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
-  
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="card bg-primary text-white text-center p-3">
-          <figure class="mb-0">
-            <blockquote class="blockquote">
-              <p>A well-known quote, contained in a blockquote element.</p>
-            </blockquote>
-            <figcaption class="blockquote-footer mb-0 text-white">
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="card text-center">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has a regular title and short paragraph of text below it.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="card">
-          <svg class="bd-placeholder-img card-img" width="100%" height="260" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Card image</text></svg>
-  
-        </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="card p-3 text-end">
-          <figure class="mb-0">
-            <blockquote class="blockquote">
-              <p>A well-known quote, contained in a blockquote element.</p>
-            </blockquote>
-            <figcaption class="blockquote-footer mb-0 text-muted">
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is another card with title and supporting text below. This card has some additional content to make it slightly taller overall.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
+  <h1>Apartamento El Xardín</h1>
+  <p class="lead"></p>
+
+  <p>El Apartamento El Xardín está situado en Cabrafigal y ofrece WiFi gratuita y vistas al mar. Se encuentra a 2,4 km
+    de la playa de Frejulfe y ofrece jardín y aparcamiento privado gratuito.<br>
+    El apartamento tiene terraza, vistas a la ciudad, 3 dormitorios, sala de estar, TV de pantalla plana vía satélite,
+    cocina equipada y 4 baños con ducha y bañera. El apartamento también cuenta con zona de estar y 4 baños.<br>
+
+    El aeropuerto más cercano es el de Asturias, ubicado a 63 km del apartamento.</p>
+
+  <hr class="my-5">
+
+  <div class="row" data-masonry='{"percentPosition": true }'>
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card">
+        <img src="/EntregableBoostrap/imagenes/206228564.jpg" class="bd-placeholder-img card-img-top" width="100%"
+          height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+          preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Con nota</title>
+        <rect width="100%" height="100%" fill="#868e96" /><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text></svg>
+        <div class="card-body">
+          <h5 class="card-title">Salon amplio para varias personas</h5>
+          <p class="card-text">Ideal para todo</p>
         </div>
       </div>
     </div>
-  
-  </main>
-  
-  
-      <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-  
-        <script async src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"></script>
-    </body>
-  </html>
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card p-3">
+        <figure class="p-3 mb-0">
+          <blockquote class="blockquote">
+            <p>¡El lugar es fantástico, salvó mi matrimonio!</p>
+          </blockquote>
+          <figcaption class="blockquote-footer mb-0 text-muted">
+            Alguien al que su matrimonio duró una semana más y cantó victoria demasiado pronto
+            <!--<cite title="Source Title">Source Title</cite>-->
+          </figcaption>
+        </figure>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card">
+        <img src="imagenes/206228584.jpg" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img"
+          aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>NOTA DE 3</title>
+        <rect width="100%" height="100%" fill="#868e96" /><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text></svg>
+        <div class="card-body">
+          <h5 class="card-title">Jardín amplio</h5>
+          <p class="card-text">Perfecto para actividades al exterior</p>
+          <p class="card-text"><small class="text-muted">¡Disfruta del buen tiempo!</small></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card">
+        <img src="imagenes/373985226.jpg" width="100%" height="260" xmlns="http://www.w3.org/2000/svg" role="img"
+          aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Placeholder</title>
+        <rect width="100%" height="100%" fill="#868e96" /><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text>
+        </svg>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card">
+        <img src="imagenes/206228526.jpg" width="100%" height="260" xmlns="http://www.w3.org/2000/svg" role="img"
+          aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Placeholder</title>
+        <rect width="100%" height="100%" fill="#868e96" /><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text>
+        </img>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card">
+        <img src="imagenes/206228555.jpg" class="bd-placeholder-img card-img-top" width="100%" height="200"
+          xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+          preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Con nota</title>
+        <rect width="100%" height="100%" fill="#868e96" /><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text></img>
+        <div class="card-body">
+          <h5 class="card-title">Cocina</h5>
+          <p class="card-text">Equipada con todo lo necesario</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card">
+        <img src="imagenes/206228556.jpg" width="100%" height="460" xmlns="http://www.w3.org/2000/svg" role="img"
+          aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Algo mas alargada</title>
+        <rect width="100%" height="100%" fill="#868e96" /><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text>
+        </img>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card">
+        <img src="imagenes/206228557.jpg" width="100%" height="460" xmlns="http://www.w3.org/2000/svg" role="img"
+          aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Algo mas alargada</title>
+        <rect width="100%" height="100%" fill="#868e96" /><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text>
+        </img>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card">
+        <img src="imagenes/206228568.jpg" width="100%" height="460" xmlns="http://www.w3.org/2000/svg" role="img"
+          aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Algo mas alargada</title>
+        <rect width="100%" height="100%" fill="#868e96" /><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text>
+        </img>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="card">
+        <img src="imagenes/373985227.jpg" width="100%" height="260" xmlns="http://www.w3.org/2000/svg" role="img"
+          aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Placeholder</title>
+        <rect width="100%" height="100%" fill="#868e96" /><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text>
+        </img>
+      </div>
+    </div>
+
+
+
+  </div>
+
+  <footer class="container" id="footer">
+    <hr>
+    <p class="float-end"><a href="#">Pa'rriba</a></p>
+    <p>Trabajo realizado por <b>Javier García Fernandez</b> para mi querído profesor de marcas
+      -------------------------------------------------------------------></p>
+  </footer>
+
+</main>
+
+
+<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+
+<script async src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+  integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"></script>
+</body>
+
+</html>
